argocd/infra/argo-workflows/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: argo-workflows-app
  name: argo-workflows-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - workflows.yanello.net
  rules:
    - backendRefs:
        - name: argo-workflows-server
          group: ""
          kind: Service
          port: 2746
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
